--- a/configuration.ini
+++ b/configuration.ini
@@ -1,14 +1,14 @@
 [SETTINGS]
 IS_KPCA = FALSE
-PHOTO_SET = ./images
+PHOTO_SET = ./att_faces
 
 [IMAGES_DATA]
-HEIGHT = 64
-WIDTH = 64
-PEOPLE_PER_SET = 40
+HEIGHT = 112
+WIDTH = 92
+PEOPLE_PER_SET = 41
 IMG_PER_PERSON = 4
 
 [RESULTS_DATA]
 EIGENVECTORS = 90
-PHOTO = ./images/1/7.pgm
+PHOTO = ./santi_1.pgm
 THRESHOLD = 77
