--- a/configuration.ini
+++ b/configuration.ini
@@ -2,15 +2,15 @@
 IS_KPCA = FALSE
 KPCA_DEGREE = 2
 PHOTO_SET = ./att_faces
-IS_VIDEO = TRUE
+IS_VIDEO = FALSE
 
 [IMAGES_DATA]
 HEIGHT = 112
 WIDTH = 92
-PEOPLE_PER_SET = 44
+PEOPLE_PER_SET = 46
 IMG_PER_PERSON = 4
 
 [RESULTS_DATA]
-EIGENVECTORS = 90
+EIGENVECTORS = 700
 PHOTO = ./person_1.pgm
 THRESHOLD = 77
