major refactor 2 working

--- a/configuration.ini
+++ b/configuration.ini
@@ -1,8 +1,8 @@
 [SETTINGS]
-IS_KPCA = FALSE
+IS_KPCA = TRUE
 KPCA_DEGREE = 3
-PHOTO_SET = ./photos/group_L
-IS_VIDEO = TRUE
+PHOTO_SET = ./photos/att_faces
+IS_VIDEO = FALSE
 SVM_C = 1.0
 SVM_ITER = 1000
 
@@ -10,7 +10,7 @@ SVM_ITER = 1000
 HEIGHT = 112
 WIDTH = 92
 PEOPLE_PER_SET = 6
-IMG_PER_PERSON = 10
+IMG_PER_PERSON = 4
 
 [RESULTS_DATA]
 EIGENVECTORS = 700
