--- a/configuration.ini
+++ b/configuration.ini
@@ -1,15 +1,15 @@
 [SETTINGS]
 IS_KPCA = TRUE
 KPCA_DEGREE = 3
-PHOTO_SET = ./photos/att_faces
-IS_VIDEO = FALSE
+PHOTO_SET = ./photos/images
+IS_VIDEO = TRUE
 SVM_C = 1.0
 SVM_ITER = 1000
 
 [IMAGES_DATA]
-HEIGHT = 112
-WIDTH = 92
-PEOPLE_PER_SET = 6
+HEIGHT = 64
+WIDTH = 64
+PEOPLE_PER_SET = 46 ;  este dato esta deprecado, no hace falta poner el resultado correcto ya.
 IMG_PER_PERSON = 4
 
 [RESULTS_DATA]
