--- a/configuration.ini
+++ b/configuration.ini
@@ -1,5 +1,5 @@
 [SETTINGS]
-IS_KPCA = TRUE
+IS_KPCA = FALSE
 KPCA_DEGREE = 3
 PHOTO_SET = ./photos/images
 IS_VIDEO = TRUE
@@ -9,7 +9,7 @@ SVM_ITER = 1000
 [IMAGES_DATA]
 HEIGHT = 64
 WIDTH = 64
-PEOPLE_PER_SET = 46 ;  este dato esta deprecado, no hace falta poner el resultado correcto ya.
+PEOPLE_PER_SET = 46
 IMG_PER_PERSON = 4
 
 [RESULTS_DATA]
